--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ uvicorn = "^0.11.5"
 pyspark = "^2.4.5"
 oandapyV20 = "^0.6.3"
 v20 = "^3.0.25"
+distributed = "^2.18.0"
+click = "^7.1.2"
+tinydb = "^4.1.1"
+pickledb = "^0.9.2"
 
 [tool.poetry.dev-dependencies]
 
