--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "adit"
-version = "0.1.0"
-description = "An end-to-end workflow for developing and testing machine learning model in distributed environment"
+version = "0.1.2"
+description = "Adit is a toolbox that helps people collaborating on machine learning prototype easier."
 authors = ["Trinh Tran <trinhtran2151995@gmail.com>"]
 license = "MIT"
 
@@ -11,27 +11,15 @@ tensorflow = "^2.2.0"
 fxcmpy = "^1.2.6"
 python-socketio = "^4.6.0"
 pandas = "^1.0.4"
-xarray = "^0.15.1"
-dash = {extras = ["complete"], version = "^1.12.0"}
 dask = {extras = ["complete"], version = "^2.17.2"}
-pyarrow = "^0.17.1"
-fastparquet = "^0.4.0"
-stumpy = "^1.3.1"
-tsfresh = "^0.16.0"
-featuretools = "^0.15.0"
-fastapi = "^0.55.1"
-uvicorn = "^0.11.5"
-pyspark = "^2.4.5"
 oandapyV20 = "^0.6.3"
 v20 = "^3.0.25"
 distributed = "^2.18.0"
 click = "^7.1.2"
-tinydb = "^4.1.1"
-pickledb = "^0.9.2"
-minio = "^5.0.10"
 faust = "^1.10.4"
-tiledb = "^0.6.3"
-docopt = "^0.6.2"
+tiledb = "^0.6.5"
+request = "^2019.4.13"
+tqdm = "^4.46.1"
 
 [tool.poetry.dev-dependencies]
 
