--- a/logging.conf
+++ b/logging.conf
@@ -1,3 +1,4 @@
+
 [loggers]
 keys=root
 
@@ -9,20 +10,13 @@ keys=simpleFormatter
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler
-
-[handler_consoleHandler]
-class=StreamHandler
-level=DEBUG
-formatter=simpleFormatter
-args=(sys.stdout,)
+handlers=fileHandler
 
 [handler_fileHandler]
 class=logging.handlers.TimedRotatingFileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=("adit.log", 'midnight', 1, 8,)
-#rotate at midnight of every day (number 1), the maximum backup log file will be 8 (one week before + today)
+args=(r"~\.adit\logs\adit.log", 'midnight', 1, 8,)
 
 [formatter_simpleFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+format=[%(asctime)s][%(levelname)8s] %(filename)s:%(lineno)s | %(name)s.%(funcName)s() - %(message)s
